--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "echarts": "^5.5.0",
     "nuxt": "^3.10.3",
     "pinia": "^2.1.7",
+    "vant": "^4.8.5",
     "vue": "^3.4.19",
     "vue-echarts": "^6.6.9",
     "vue-router": "^4.3.0"
