--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "@vant/nuxt": "^1.0.4",
     "dotenv": "^16.4.5",
     "echarts": "^5.5.0",
     "nuxt": "^3.10.3",
@@ -34,6 +35,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "less": "^4.2.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.2"
   }
