--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "less": "^4.2.0",
     "prettier": "^3.2.5",
+    "sass": "^1.71.1",
     "typescript": "^5.4.2"
   }
 }
