--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 BASE_URL=http://localhost:3000
-API_URL=http://192.168.1.11:8081/api
+API_URL=http://localhost:8081/api
 API_SECRET=your-api-key
 HOME_URL="http://localhost:3000"
 LOGIN_URL="http://localhost:3000"
